--- a/app/widget.html
+++ b/app/widget.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/menu.css" />
     <script src="./js/main.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="title">
@@ -33,10 +34,11 @@
           <th>Comision (%)</th>
           <th>A pagar</th>
           <th>Saldo adeudado</th>
-          <th colspan="2">Remanente 1</th>
           <th>Comision Pagada</th>
+          <th id="cols" colspan="3">Remanente 1</th>
         </thead>
-        <tbody>
+        <tbody id="table-body">
+
           <tr>
             <td>2022/01/05</td>
             <td>Vendedor Prueba</td>
@@ -52,8 +54,6 @@
             </td>
             <td>$0</td>
             <td>$220</td>
-            <td><input type="text" class="form-field" /></td>
-            <td><input type="text" class="form-field" /></td>
             <td>
               <input
                 type="checkbox"
@@ -61,9 +61,14 @@
                 id="comision-pagada"
               />
             </td>
+            <td><button type="button" class="add" onclick="addRemanente(this)" data-cont=3> + </button></td>
+            <td><input type="text" class="form-field" /></td>
+            <td><input type="text" class="form-field" /></td>
           </tr>
+
         </tbody>
       </table>
+      <button class="new-row" onclick="addRow()">Añadir Registro</button>
     </div>
   </body>
 </html>
