agrega columna de remanentes

--- a/app/widget.html
+++ b/app/widget.html
@@ -20,7 +20,7 @@
     <div class="container-data">
     <div class="wrapper" id="coordinadores">
       <table id="table-data" class="table-data">
-        <thead >
+        <thead class="thead">
           <tr id="row1">
           <th>Fecha de Cierre</th>
           <th>Coordinador</th>
